# libclocale

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libclocale-wiki.ini  libclocale.ini  libclocale.pc.in  libclocale.spec.in
.github/workflows/: build_linux.yml  build_shared.yml
.travis/: runtests.sh  script.sh
common/: config.h.in
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libclocale.h.in
include/libclocale/: definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libclocale/: Makefile.am  libclocale.c  libclocale.rc.in  libclocale_codepage.c  libclocale_codepage.h  libclocale_definitions.h  libclocale_definitions.h.in  libclocale_extern.h  libclocale_language.c  libclocale_language.h  libclocale_libcerror.h  libclocale_libcstring.h  libclocale_locale.c  libclocale_locale.h  libclocale_support.c  libclocale_support.h  libclocale_unused.h  libclocale_wide_string.c  libclocale_wide_string.h
manuals/: Makefile.am  libclocale.3
msvscpp/: Makefile.am  libclocale.sln
msvscpp/clocale_test_codepage/: clocale_test_codepage.vcproj
msvscpp/clocale_test_get_codepage/: clocale_test_get_codepage.vcproj
msvscpp/clocale_test_get_decimal_point/: clocale_test_get_decimal_point.vcproj
msvscpp/clocale_test_get_version/: clocale_test_get_version.vcproj
msvscpp/clocale_test_locale/: clocale_test_locale.vcproj
msvscpp/clocale_test_support/: clocale_test_support.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libclocale_dll/: libclocale_dll.vcproj
tests/: Makefile.am  clocale_test_codepage.c  clocale_test_get_codepage.c  clocale_test_get_decimal_point.c  clocale_test_get_version.c  clocale_test_libcerror.h  clocale_test_libclocale.h  clocale_test_libcstring.h  clocale_test_locale.c  clocale_test_macros.h  clocale_test_support.c  clocale_test_unused.h  pkgbuild.sh  runtests.sh  test_api_functions.ps1  test_api_functions.sh  test_get_codepage.sh  test_get_decimal_point.sh  test_library.ps1  test_library.sh
