MSVSCPP_FILES = \
	clocale_test_get_codepage/clocale_test_get_codepage.vcproj \
	clocale_test_get_decimal_point/clocale_test_get_decimal_point.vcproj \
	clocale_test_get_version/clocale_test_get_version.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcstring/libcstring.vcproj \
	libclocale.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

