MSVSCPP_FILES = \
	clocale_test_codepage/clocale_test_codepage.vcproj \
	clocale_test_locale/clocale_test_locale.vcproj \
	clocale_test_support/clocale_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcstring/libcstring.vcproj \
	libclocale.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

